<resources>
    <string name="app_name">UI Components</string>
    <string name="msg_desc">App Icon</string>
    <string name="title_fuzz"><b>FRUZZ</b>digital</string>
    <string name="title_digital">digital</string>
    <string name="title_btn_login">Login</string>
    <string name="title_btn_register">Register</string>
    <string name="action_continue_as_guest">Continue as a guest</string>
    <string name="title_welcome_text">Welcome back! </string>
    <string name="text_email">Enter your email</string>
    <string name="text_password">Enter your Password</string>
    <string name="action_forget_password">forget password?</string>
    <string name="msg_facebook_login">facebook login</string>
    <string name="msg_google_login">Google Login</string>
    <string name="msg_apple_login">Apple Login</string>
    <string name="text_options">Or Login with</string>
    <string name="msg_ask">Don’t have an account?</string>
    <string name="action_register_now">Register Now</string>
    <string name="text_username">Username</string>
    <string name="text_confirm_password">Enter Confirm Password</string>
    <string name="tv_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_conform_password">Conform Password</string>
    <string name="action_login_now">Login Now</string>
    <string name="text_remember_password">Remember Password?</string>
    <string name="text_register_with">Or Register with</string>
    <string name="title_image_button">Image Button with States</string>
    <string name="txt_flutter">Flutter</string>
    <string name="txt_react_native">React Native</string>
    <string name="txt_ios">iOS</string>
    <string name="txt_android">Android</string>
    <string name="txt_category">Selected Category</string>
    <string name="txt_food">Food</string>
    <string name="txt_stationary">Stationary</string>
    <string name="txt_electronics">Electronics</string>
    <string name="txt_clothes">Clothes</string>
    <string name="txt_choose_category">Choose Category</string>
    <string name="text_choose_radio">Select your Stack?</string>
    <string name="txt_clear">CLEAR</string>
    <string name="txt_show">Show</string>
    <string name="txt_switch_mode">OFF/ON</string>
    <string name="txt_spinner">Spinner</string>
    <string name="txt_create"><b>Create \nNew Meeting</b></string>
    <string name="text_default_time">01:30 PM</string>
    <string name="txt_task_name">Task Name</string>
    <string name="txt_default_date">Friday 12, 2024</string>
    <string name="title_meeting">New Meeting</string>
    <string name="txt_meeting_time">Meeting Time</string>
    <string name="txt_meeting_date">Meeting Date</string>
    <string name="txt_custom_alert_dialog">Custom Alert Dialog</string>
    <string name="txt_alert_dialog">Alert Dialog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_enter_username">Enter username</string>
    <string name="title_html_text">Html Text</string>
    <string name="txt_empty" />
    <string name="txt_start">Start</string>
    <string name="txt_enter_url">Enter URL</string>
    <string name="title_google_search">Google Search</string>
    <string name="txt_enter_phone">Enter phone</string>
    <string name="txt_dial_call">Dial Call</string>
    <string name="txt_send_mail">Send Mail</string>
    <string name="txt_text_message">Enter Text Message</string>
    <string name="txt_send_text_message">Send Text Message</string>
    <string name="txt_plain_text">Enter Plain Text</string>
    <string name="txt_send_plain">Send Plain Text</string>
    <string name="title_custom_toast">it is custom toast</string>
    <string name="button_create_directory">Create Directory</string>
    <string name="txt_et_directory_name">Enter Directory Name</string>
    <string name="title_external_storage">External Storage</string>
    <string name="et_information">Enter information</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_product_name">Men\'s Regular Fit Graphic T-Shirt</string>
    <string name="text_product_price">Rs.499</string>
    <string name="txt_btn_gridlayout">GridLayout</string>
    <string name="txt_btn_linearlayout">LinearLayout</string>
    <string name="title_table_id">ID</string>
    <string name="title_table_first_name">First Name</string>
    <string name="title_table_last_name">Last Name</string>
    <string name="txt_id_1">1</string>
    <string name="txt_id_2">2</string>
    <string name="txt_id_3">3</string>
    <string name="txt_id_4">4</string>
    <string name="txt_name_shyam">SHYAM</string>
    <string name="txt_name_buhecha">BUHECHA</string>
    <string name="txt_name_sagar">SAGAR</string>
    <string name="txt_name_darshan">DARSHAN</string>
    <string name="txt_name_pratik">PRATIK</string>
    <string name="txt_name_ajudiya">AJUDIYA</string>
    <string name="txt_btn_show_progress">Show progress</string>
    <string name="txt_btn_show_alert_dialog">Show Alert Dialog</string>
    <string name="txt_00">00</string>
    <string name="txt_btn_set_event">Set Event To Calender</string>
    <string name="txt_selected_date">Selected Date</string>
    <string name="txt_btn_create_pdf">Create Pdf</string>
    <string name="txt_et_enter_filename">Enter Filename</string>
    <string name="txt_et_enter_data">Enter Data</string>
    <string name="action_open_pdf">Open Pdf</string>
    <string name="txt_btn_select_date_range">Select Date Range</string>
    <string name="txt_date_range">Date Range</string>
    <string name="txt_btn_create_meeting">Create Meeting</string>
    <string name="btn_save_image_to_internal_storage">Save Image To Internal Storage</string>
    <string name="text_btn_read_image_from_internal_storage">Read Image From Internal Storage</string>
</resources>