<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/title_image_button"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/button"
                android:layout_width="48dp"
                android:layout_height="46dp"
                android:background="@drawable/btn_custom"
                android:contentDescription="@string/title_image_button" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/txt_switch_mode"
                android:thumb="@drawable/custum_switch_thumb"
                app:track="@drawable/custom_switch_track" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_spinner"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_planets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/txt_choose_category"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/txt_clothes"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/txt_electronics"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/txt_stationary"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/checkbox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/txt_food"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_category"
                    android:textAlignment="center"
                    android:textColor="#3F51B5"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_selected_checkboxes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#020202"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_choose_radio"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">

                <RadioGroup
                    android:id="@+id/radio_stacks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/ratio_android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_radio_btn"
                        android:text="@string/txt_android"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ratio_ios"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_radio_btn"
                        android:text="@string/txt_ios"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ratio_react"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_radio_btn"
                        android:text="@string/txt_react_native"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/ratio_flutter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/custom_radio_btn"
                        android:text="@string/txt_flutter"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_clear_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1"
                    android:text="@string/txt_clear" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_show_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/txt_show" />
            </LinearLayout>

            <CheckedTextView
                android:id="@+id/checked_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:checked="true"
                android:text="Apple"
                android:textColor="@color/black"
                android:textSize="24sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>