<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome_text"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="shyam"
        android:hint="@string/text_username"
        android:inputType="text"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="shyam@gmail.com"
        android:layout_marginBottom="8dp"
        android:hint="@string/tv_email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:autofillHints=""
        android:hint="@string/text_hint_password"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/et_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/et_confirm_password" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:autofillHints=""
        android:hint="@string/text_conform_password"
        android:inputType="textPassword"
        android:maxLength="8"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register" />

    <TextView
        android:id="@+id/text_register_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_register_with"
        app:layout_constraintBottom_toTopOf="@+id/btn_google"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/btn_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/title_btn_register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_register_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:contentDescription="@string/msg_facebook_login"
        android:scaleType="fitXY"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toStartOf="@+id/btn_google"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@+id/btn_google" />

    <ImageButton
        android:id="@+id/btn_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
android:layout_marginEnd="8dp"        android:layout_marginBottom="36dp"
        android:layout_toEndOf="@id/btn_facebook"
        android:background="@color/white"
        android:contentDescription="@string/msg_google_login"
        android:scaleType="fitXY"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toTopOf="@+id/text_remember_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_apple"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/btn_google"
        android:background="@color/white"
        android:contentDescription="@string/msg_apple_login"
        android:scaleType="fitXY"
        android:src="@drawable/ic_apple"
        app:layout_constraintStart_toEndOf="@+id/btn_google"
        app:layout_constraintTop_toTopOf="@+id/btn_google" />

    <TextView
        android:id="@+id/text_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_remember_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_login_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/action_login_now"
        android:textColor="@color/primary_light_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/text_remember_password"
        app:layout_constraintTop_toTopOf="@id/text_remember_password" />


</androidx.constraintlayout.widget.ConstraintLayout>